# pixy-pve

./: .gitignore  .gitmodules  pyproject.toml
src/: example.py  pycpio  zenlib
src/pixy_pve/initrd/: functions  init
